# adk-voice-support

./: .dockerignore  .env.example  .gitignore  README.md  project_spec.md  pyproject.toml
adk_agents/voice_support/: __init__.py  agent.py
app/: __init__.py  cli.py  config.py  demo_server.py
app/agents/: __init__.py  billing_agent.py  escalation_agent.py  policy_agent.py  prompts.py  root_agent.py  technical_support_agent.py
app/data/: __init__.py  mock_customers.py  mock_invoices.py  mock_known_issues.py  mock_policies.py
app/services/: __init__.py  adk_runner.py  adk_runtime.py  intent_detector.py  interrupt_handler.py  response_parser.py  trace_logger.py
app/tools/: __init__.py  billing_tools.py  customer_tools.py  escalation_tools.py  policy_tools.py  technical_tools.py
app/ui/: __init__.py  gradio_app.py  streamlit_app.py
app/voice/: __init__.py  audio_manager.py  intent_detector_voice.py  live_api_client.py  live_api_session.py  pipeline_runner.py  stt.py  tts.py  vad.py
docs/: adk_streaming_alignment.md  architecture.md  evaluation_design.md  openai_agents_sdk_mirror_plan.md  voice_architecture.md
evals/: eval_scenarios.json  eval_scenarios_voice.json  metrics.py  run_eval.py  run_eval_voice.py  voice_metrics.py
tests/: __init__.py  test_adk_runtime.py  test_adk_web_agent.py  test_agents.py  test_demo_server.py  test_eval_metrics.py  test_gradio_app.py  test_intent_detector.py  test_interrupt_handler.py  test_live_api.py  test_run_eval.py  test_runner.py  test_tools.py  test_voice_eval.py
