[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-support-adk-lab"
version = "0.1.0"
description = "ADK-first voice customer support simulator and evaluation lab."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
voice = [
    "deepgram-sdk>=3.0.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "pyttsx3>=2.90",
    "websockets>=12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "evals*"]
exclude = ["logs*", "tests*", "docs*"]
